--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <tr>
             <td>
                 
-                <img src="me-original-640.JPG" alt="Amya Moore's profile picture" width="320">
+                <img src="./me-original-640.JPG" alt="Amya Moore's profile picture" width="320">
             </td>
             
             <td>
