added skills list

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <li><a href="#community-involvement">Community Involvement</a></li>
             <li><a href="#campus-involement">Campus Involvement</a></li>
             <li><a href="#campus-leadership">Campus Leadership</a></li>
+            <li><a href="#my-skills">Skills and Other Interests</a></li>
         </ul>
     </p>
     
@@ -369,6 +370,24 @@
             </td>
         </tr>
     </table>
+
+    <hr>
+    <h3 id="my-skills">Skills and Other Interests</h3>
+    <p>
+        <ul>
+            <li>Microsoft Office</li>
+            <li>Google Suite</li>
+            <li>Organisational Skills</li>
+            <li>WordPress</li>
+            <li>Proofreading</li>
+            <li>Java - Beginner</li>
+            <li>HTML - Beginner</li>
+            <li>Python -Beginner</li>
+            <li>CSS - Beginner</li>
+            <li>C - Beginner</li>
+            <li>Korean - Beginner Fluency</li>
+        </ul>
+    </p>
     
 </body>
 </html>
