edited skills table

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 
     <hr>
     <h3 id="my-skills">Skills and Other Interests</h3>
-    <table>
+    <table cellspacing="15" class="cv-table">
         <tr>
             <td>
                 <ul>
