All caps header

--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
     </table>
 
     <hr>
-    <h3 id="my-skills">Skills and Other Interests</h3>
+    <h3 id="my-skills">SKILLS AND OTHER INTERESTS</h3>
     <table cellspacing="15" class="cv-table">
         <tr>
             <td>
